--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rectangle = {'width':100, 'height':50, 'x':25, 'y':40}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,7 +36,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(rectangle['width'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rectangle['x'], rectangle['y'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = rectangle['width'] * rectangle['height']\n",
+    "print(area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "rectangle['x']= rectangle['x'] + 20\n",
+    "rectangle ['y']= rectangle['y'] - 10\n",
+    "print(rectangle['y'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n"
+     ]
+    }
+   ],
+   "source": [
+    "rectangle['color'] = \"green\"\n",
+    "print(rectangle['color'])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'radius': 35, 'center': (59, 80)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "circle = {'radius':35, 'center':(59, 80)}\n",
+    "print(circle)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +177,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#math.hypot()function x distance = circle(center[0]) - rectangle 'x'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
